fixed breedcrumb spacing in course-search page

--- a/src/scss/pages/_eventoverview.scss
+++ b/src/scss/pages/_eventoverview.scss
@@ -1,7 +1,11 @@
 .event-sub-section {
   padding-top: 25px;
-  padding-bottom: 35px !important;
+  padding-bottom: 35px;
   background-color: rgba($color: #ffffff, $alpha: 0.4);
+
+  &--spaceY {
+    padding-bottom: 70px;
+  }
 
   &-main {
     margin-top: 60px;
@@ -24,7 +28,7 @@
         h6 {
           color: #42414b !important;
           font-family: 'Poppins', sans-serif;
-        font-weight: 500;
+          font-weight: 500;
           font-size: 24px !important;
         }
 
@@ -71,14 +75,14 @@
   }
 }
 
-.created-by  {
-    margin-top: 20px;
+.created-by {
+  margin-top: 20px;
 }
 
 // Event inforamtion section
 .event-info {
-padding-bottom: 100px;
-padding-top: 0px;
+  padding-bottom: 100px;
+  padding-top: 0px;
   &-main {
     .image {
       margin-top: 35px;
@@ -197,10 +201,6 @@ padding-top: 0px;
     }
   }
 
-  .event-sub-section {
-    padding-bottom: 25px;
-  }
-
   .event-info-main .image {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -249,10 +249,6 @@ padding-top: 0px;
     }
   }
 
-  .event-sub-section {
-    padding-bottom: 25px;
-  }
-
   .event-info-main .image {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -296,10 +292,6 @@ padding-top: 0px;
     margin-bottom: 20px;
   }
 
-  .event-sub-section {
-    padding-bottom: 25px;
-  }
-
   .event-info-main .image {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -333,10 +325,6 @@ padding-top: 0px;
 
   .event-time {
     margin-bottom: 20px;
-  }
-
-  .event-sub-section {
-    padding-bottom: 25px;
   }
 
   .event-info-main .image {
@@ -378,10 +366,6 @@ padding-top: 0px;
 
   .event-time {
     margin-bottom: 20px;
-  }
-
-  .event-sub-section {
-    padding-bottom: 25px;
   }
 
   .event-info-main .image {
